--- a/Music_School/home.html
+++ b/Music_School/home.html
@@ -12,7 +12,7 @@
 <img src="image/logo.png">
 </div>
 <div id = "menu">
-	<div class ="menu-tittle">
+	<div class ="menu-title">
 	HOME
 	<div class= "menu-content">
 		<a href ="">my details</a><br><br>
@@ -20,34 +20,34 @@
 		<a href ="">Current Teacher</a>
 	</div>
 	</div>
-	<div class ="menu-tittle">
+	<div class ="menu-title">
 	CONTACT
 	<div class= "menu-content">
 		<a></a>
 		<a></a>
 	</div>
 	</div>
-	<div class ="menu-tittle">
+	<div class ="menu-title">
 	ENROLMENT
 	<div class= "menu-content">
 		<a></a>
 		<a></a>
 	</div>
 	</div>
-	<div class ="menu-tittle">
+	<div class ="menu-title">
 	ENROLMENT
 	<div class= "menu-content">
 		<a></a>
 		<a></a>
 	</div>
 	</div>
-	<div class ="menu-tittle">
+	<div class ="menu-title">
 	ENROLMENT
 	<div class= "menu-content">
 		<a></a>
 		<a></a>
 	</div>
-	</div><div class ="menu-tittle">
+	</div><div class ="menu-title">
 	ENROLMENT
 	<div class= "menu-content">
 		<a></a>
