--- a/Website/home.html
+++ b/Website/home.html
@@ -177,8 +177,16 @@
 	</div>
 	
 </div>
-<div id ="footer">
-<p>&copy; 2016 by KeyboardSmashers. All rights reserved.</p>
+<div id="footer">
+			<div>
+				<div class="connect">
+					<a href="https://twitter.com/" class="twitter">twitter</a>
+					<a href="https://www.facebook.com/" class="facebook">facebook</a>
+					<a href="https://plus.google.com/" class="googleplus">googleplus</a>
+					<a href="https://www.pinterest.com/" class="pinterest">pinterest</a>
+				</div>
+				<p>&copy; 2023 by KeyboardSmashers. All rights reserved.</p>
+			</div>
 </div>
 </body>
 </html>
