--- a/Website/home.html
+++ b/Website/home.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8">
 <title>Delphic Hymnes</title>
 <link href="css/mycss.css" rel="stylesheet" type="text/css" >
-<link href="themes/js-image-slider.css" rel="stylesheet" type="text/css" >
-<script src="themes/js-image-slider.js" type="text/javascript"></script>	
+<link href="css/style.css" rel="stylesheet" type="text/css" >
 </head>
 <body style="background-image:url('image/background.gif');">
 <div id ="header">
@@ -13,7 +12,10 @@
 </div>
 <div id = "menu">
 	<div class ="menu-title">
-	HOME
+	<a href = "home.html">HOME</a>
+	</div>
+	<div class ="menu-title">
+	CONTACT
 	<div class= "menu-content">
 		<a href ="">my details</a><br><br>
 		<a href ="">Curent Student</a><br><br>
@@ -21,13 +23,6 @@
 	</div>
 	</div>
 	<div class ="menu-title">
-	CONTACT
-	<div class= "menu-content">
-		<a></a>
-		<a></a>
-	</div>
-	</div>
-	<div class ="menu-title">
 	ENROLMENT
 	<div class= "menu-content">
 		<a></a>
@@ -47,12 +42,9 @@
 		<a></a>
 		<a></a>
 	</div>
-	</div><div class ="menu-title">
-	ENROLMENT
-	<div class= "menu-content">
-		<a></a>
-		<a></a>
 	</div>
+	<div class ="menu-title">
+	<a href ="login.html">LOGIN</a>
 	</div>
 </div>
 <div id ="wrap">
@@ -95,7 +87,7 @@
 			designed for children aged
 			between 3 to 12
 			</div>
-		
+
 		</div>
 			<div class = "coursetype">
 			<div class= "coursename">
@@ -109,7 +101,7 @@
 			designed for children aged
 			between 3 to 12
 			</div>
-		
+
 		</div>
 	<div id= "intro">
 		<img src="image/info.png">
@@ -175,18 +167,18 @@
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 <div id="footer">
-			<div>
-				<div class="connect">
-					<a href="https://twitter.com/" class="twitter">twitter</a>
-					<a href="https://www.facebook.com/" class="facebook">facebook</a>
-					<a href="https://plus.google.com/" class="googleplus">googleplus</a>
-					<a href="https://www.pinterest.com/" class="pinterest">pinterest</a>
-				</div>
-				<p>&copy; 2023 by KeyboardSmashers. All rights reserved.</p>
-			</div>
-</div>
+ 			<div>
+ 				<div class="connect">
+ 					<a href="https://twitter.com/" class="twitter">twitter</a>
+ 					<a href="https://www.facebook.com/" class="facebook">facebook</a>
+ 					<a href="https://plus.google.com/" class="googleplus">googleplus</a>
+ 					<a href="https://www.pinterest.com/" class="pinterest">pinterest</a>
+ 				</div>
+ 				<p>&copy; 2023 by KeyboardSmashers. All rights reserved.</p>
+ 			</div>
+  </div>
 </body>
 </html>
