--- a/Website/home.html
+++ b/Website/home.html
@@ -6,7 +6,7 @@
 <link href="css/mycss.css" rel="stylesheet" type="text/css" >
 <link href="css/style.css" rel="stylesheet" type="text/css" >
 </head>
-<body style="background-image:url('image/background.gif');">
+<body style="background-image:url('image/background.gif') no-repeat;">
 <div id ="header">
 <img src="image/logo.png">
 </div>
