update all pages

--- a/Website/About Us.html
+++ b/Website/About Us.html
@@ -38,54 +38,79 @@
 			<img src="image/image1.gif">
 		</div>
 
+		<div id ="details">
+			<a href ="">READ MORE</a>
+		</div>
+
 </div>
-	<div id ="content">
+<div id ="content">
 		<div id ="cname">
 			<img src="image/coresevices.png">
 		</div>
-		<div class = "coursetype">
-			<div class= "coursename">
-			Children Course
+</div>
+	<div id ="wrapper" >
+	<div id= "bname">
+	OUR TEACHERS
+	</div>
+	<div class ="teacher" >
+		<div class = "teacherd">
+			<div class ="tname">
+			<b>LUNA NAIND</b>
 			</div>
-			<div class= "courselink">
-			&#9734;
+			<div class ="tcname">
+			GUITAR
 			</div>
-			<div class= "coursedescription">
-			Pinelands music programs
-			designed for children aged
-			between 3 to 12
+			<div class ="timage">
+			<img src = "image/luna.png">
 			</div>
 		</div>
-
-		<div class = "coursetype">
-			<div class= "coursename">
-			Children Course
+		<div class = "teacherd">
+			<div class ="tname">
+			<b>AHMED SAUR</b>
 			</div>
-			<div class= "courselink">
-			 &#9825;
+			<div class ="tcname">
+			GUITAR
 			</div>
-			<div class= "coursedescription">
-			Pinelands music programs
-			designed for children aged
-			between 3 to 12
+			<div class ="timage">
+			<img src = "image/ahmen.png">
 			</div>
-
 		</div>
-			<div class = "coursetype">
-			<div class= "coursename">
-			Children Course
+		<div class = "teacherd">
+			<div class ="tname">
+			<b>ENA LEYNOVI</b>
 			</div>
-			<div class= "courselink">
-			&#9813;
+			<div class ="tcname">
+			GUITAR
 			</div>
-			<div class= "coursedescription">
-			Pinelands music programs
-			designed for children aged
-			between 3 to 12
+			<div class ="timage">
+			<img src = "image/ena.png">
 			</div>
-
+		</div>
+		<div class = "teacherd">
+			<div class ="tname">
+			<b>ANNA LAREND</b>
+			</div>
+			<div class ="tcname">
+			GUITAR
+			</div>
+			<div class ="timage">
+			<img src = "image/unknow.png">
+			</div>
+		</div>
+		<div class = "teacherd">
+			<div class ="tname">
+			<b>KELVIN SIMONS</b>
+			</div>
+			<div class ="tcname">
+			GUITAR
+			</div>
+			<div class ="timage">
+			<img src = "image/kelvin.png">
+			</div>
 		</div>
 	</div>
+
+</div>
 <div id="footer">
  			<div>
  				<div class="connect">
