--- a/Website/login.html
+++ b/Website/login.html
@@ -6,47 +6,33 @@
     <link href="css/mycss.css" rel="stylesheet" type="text/css" >
     <link href="css/style.css" rel="stylesheet" type="text/css" >
   </head>
-  <body style="background:url('image/background.gif') no-repeat;">
+  <body style="background:url('image/background.gif') no-repeat;
+             margin:0;
+             background-size:100% 100vh">
     <div id ="header">
+    <a href ="home.html">
     <img src="image/logo.png">
+    </a>
     </div>
-    <div id = "menu">
-      <div class ="menu-title">
-    	<a href = "home.html">HOME</a>
-    	</div>
-    	<div class ="menu-title">
-    	CONTACT
-    	<div class= "menu-content">
-    		<a href ="">my details</a><br><br>
-    		<a href ="">Curent Student</a><br><br>
-    		<a href ="">Current Teacher</a>
-    	</div>
-    	</div>
-    	<div class ="menu-title">
-    	ENROLMENT
-    	<div class= "menu-content">
-    		<a></a>
-    		<a></a>
-    	</div>
-    	</div>
-    	<div class ="menu-title">
-    	ENROLMENT
-    	<div class= "menu-content">
-    		<a></a>
-    		<a></a>
-    	</div>
-    	</div>
-    	<div class ="menu-title">
-    	ENROLMENT
-    	<div class= "menu-content">
-    		<a></a>
-    		<a></a>
-    	</div>
-    	</div>
-      <div class ="menu-title">
-    	<a href ="login.html">LOGIN</a>
-    	</div>
+ <div id = "menu">
+    <div class ="menu-title">
+    <a href = "home.html">HOME</a>
     </div>
+    <div class ="menu-title">
+    <a>ENROLMENT</a>
+    
+    </div>
+    <div class ="menu-title">
+    ABOUT US
+    <div class= "menu-content">
+        <a>Our School</a><br>
+        <a href ="About Us.html">Staff</a>
+    </div>
+    </div>
+    <div class ="menu-title">
+    <a href ="login.html">LOGIN</a>
+    </div>
+</div>
 <div id = "content">
     <div id = "login">
       <div class="titlebar">
