Removed button and changed a picture
Removed the READ MORE button from this page and changed the coreservice picture to a line image

--- a/Website/About Us.html
+++ b/Website/About Us.html
@@ -37,15 +37,10 @@
 		<div id="slider">
 			<img src="image/image1.gif">
 		</div>
-
-		<div id ="details">
-			<a href ="">READ MORE</a>
-		</div>
-
 </div>
 <div id ="content">
 		<div id ="cname">
-			<img src="image/coresevices.png">
+			<img src="image/line.png">
 		</div>
 </div>
 	<div id ="wrapper" >
