Add student portal page

--- a/Website/login.html
+++ b/Website/login.html
@@ -41,7 +41,7 @@
       <form class ="loginform">
         <input class = "textfield" name="username" type="text" placeholder="UserName">
         <input class = "textfield" name="password" type="password" placeholder="Password">
-        <input class = "button" name="login" type="button" value="LogIn">
+        <a href ="portal/portal.html"><input class = "button" name="login" type="button" value="LogIn"></a>
       </form>
     </div>
 </div>
