Completed the About Us page
Added page title, school description and redesigned the staff section layout. Will further redesign the staff section to allow for extended descriptions.

--- a/Website/About Us.html
+++ b/Website/About Us.html
@@ -39,73 +39,102 @@
 		</div>
 </div>
 <div id ="content">
+		<div id ="page-heading">
+			About Us<br>
+		</div>
 		<div id ="cname">
 			<img src="image/line.png">
 		</div>
 </div>
-	<div id ="wrapper" >
-	<div id= "bname">
-	OUR TEACHERS
+
+<div id ="wrapper" >
+	<div class= "red-heading">
+		Pinelands Music School
+	</div>
+	<div class= "school-description">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel consectetur lorem. Fusce imperdiet interdum condimentum. Vivamus convallis, felis a placerat accumsan, eros nisi tempus ligula, vel iaculis lectus dolor quis lectus. Vivamus et pretium enim. Cras vel mauris et sapien dictum commodo. Nam efficitur tellus elit. Duis vel fermentum mauris. Pellentesque gravida felis vel nulla iaculis, sit amet sodales diam aliquam. Duis viverra ultrices convallis. Sed non pellentesque arcu, et efficitur nibh. 
+	</div>
+	<div class= "red-heading">
+		Vision and Values
+	</div>
+	<div class= "school-description">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel consectetur lorem. Fusce imperdiet interdum condimentum. Vivamus convallis, felis a placerat accumsan, eros nisi tempus ligula, vel iaculis lectus dolor quis lectus. Vivamus et pretium enim. Cras vel mauris et sapien dictum commodo. Nam efficitur tellus elit. Duis vel fermentum mauris. Pellentesque gravida felis vel nulla iaculis, sit amet sodales diam aliquam. Duis viverra ultrices convallis. Sed non pellentesque arcu, et efficitur nibh. 
+	</div>
+	<div class= "red-heading">
+		Innovate and Create
+	</div>
+	<div class= "school-description">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel consectetur lorem. Fusce imperdiet interdum condimentum. Vivamus convallis, felis a placerat accumsan, eros nisi tempus ligula, vel iaculis lectus dolor quis lectus. Vivamus et pretium enim. Cras vel mauris et sapien dictum commodo. Nam efficitur tellus elit. Duis vel fermentum mauris. Pellentesque gravida felis vel nulla iaculis, sit amet sodales diam aliquam. Duis viverra ultrices convallis. Sed non pellentesque arcu, et efficitur nibh. 
+	</div>
+
+	
+	<div id= "staff-heading">
+	Our Staff
 	</div>
 	<div class ="teacher" >
 		<div class = "teacherd">
-			<div class ="tname">
-			<b>LUNA NAIND</b>
-			</div>
-			<div class ="tcname">
-			GUITAR
-			</div>
 			<div class ="timage">
-			<img src = "image/luna.png">
+				<img src = "image/luna.png">
+			</div>
+			<div class ="tname">
+				<b>Luna Naind</b>
+			</div>
+			<div class ="more-description">
+				Guitar<br>
+				super.anonymous@gmail.com
 			</div>
 		</div>
 		<div class = "teacherd">
-			<div class ="tname">
-			<b>AHMED SAUR</b>
-			</div>
-			<div class ="tcname">
-			GUITAR
-			</div>
 			<div class ="timage">
-			<img src = "image/ahmen.png">
+				<img src = "image/ahmen.png">
+			</div>
+			<div class ="tname">
+				<b>Ahmed Saur</b>
+			</div>
+			<div class ="more-description">
+				Guitar<br>
+				super.anonymous@gmail.com
 			</div>
 		</div>
 		<div class = "teacherd">
-			<div class ="tname">
-			<b>ENA LEYNOVI</b>
-			</div>
-			<div class ="tcname">
-			GUITAR
-			</div>
 			<div class ="timage">
-			<img src = "image/ena.png">
+				<img src = "image/ena.png">
+			</div>
+			<div class ="tname">
+				<b>Ena Leynovi</b>
+			</div>
+			<div class ="more-description">
+				Guitar<br>
+				super.anonymous@gmail.com
 			</div>
 		</div>
 		<div class = "teacherd">
-			<div class ="tname">
-			<b>ANNA LAREND</b>
-			</div>
-			<div class ="tcname">
-			GUITAR
-			</div>
 			<div class ="timage">
-			<img src = "image/unknow.png">
+				<img src = "image/unknow.png">
+			</div>
+			<div class ="tname">
+				<b>Anna Larend</b>
+			</div>
+			<div class ="more-description">
+				Guitar<br>
+				super.anonymous@gmail.com
 			</div>
 		</div>
 		<div class = "teacherd">
-			<div class ="tname">
-			<b>KELVIN SIMONS</b>
-			</div>
-			<div class ="tcname">
-			GUITAR
-			</div>
 			<div class ="timage">
-			<img src = "image/kelvin.png">
+				<img src = "image/kelvin.png">
+			</div>
+			<div class ="tname">
+				<b>Kelvin Simons</b>
+			</div>
+			<div class ="more-description">
+				Guitar<br>
+				super.anonymous@gmail.com
 			</div>
 		</div>
 	</div>
-
 </div>
+
 <div id="footer">
  			<div>
  				<div class="connect">
