--- a/Website/login.html
+++ b/Website/login.html
@@ -6,7 +6,7 @@
     <link href="css/mycss.css" rel="stylesheet" type="text/css" >
     <link href="css/style.css" rel="stylesheet" type="text/css" >
   </head>
-  <body style="background:url('image/background.gif') no-repeat;
+  <body style="background:url('image/back.gif') no-repeat;
              margin:0;
              background-size:100% 100vh">
     <div id ="header">
@@ -26,7 +26,8 @@
     ABOUT US
     <div class= "menu-content">
         <a>Our School</a><br>
-        <a href ="About Us.html">Staff</a>
+        <a href ="About Us.html">Staff</a><br>
+        <a href ="career.html">Apply for jobs</a>
     </div>
     </div>
     <div class ="menu-title">
