--- a/Website/home.html
+++ b/Website/home.html
@@ -26,7 +26,8 @@
     ABOUT US
 	<div class= "menu-content">
 		<a>Our School</a><br>
-		<a href ="About Us.html">Staff</a>
+		<a href ="About Us.html">Staff</a><br>
+		<a href ="career.html">Apply for jobs</a>
 	</div>
 	</div>
 	<div class ="menu-title">
