Fixed menu and completed staff section

--- a/Website/About Us.html
+++ b/Website/About Us.html
@@ -13,33 +13,30 @@
     <a href ="home.html">
     <img src="image/logo.png">
     </a>
+</div>
+ <div id = "menu">
+    <div class ="menu-title">
+		<a href = "home.html">HOME</a>
     </div>
-<div id = "menu">
+    <div class ="menu-title">
+		<a>ENROLMENT</a>
+    </div>
+    <div class ="menu-title">
+		<a href ="About Us.html">ABOUT US</a>
+    </div>
 	<div class ="menu-title">
-	<a href = "home.html">HOME</a>
+		<a href ="career.html">CAREERS</a>
 	</div>
-	<div class ="menu-title">
-	<a>ENROLMENT</a>
-	
-	</div>
-	<div class ="menu-title">
-    ABOUT US
-	<div class= "menu-content">
-		<a>Our School</a><br>
-		<a href ="About Us.html">Staff</a><br>
-		<a href ="career.html">Apply for jobs</a>
-	</div>
-	</div>
-	<div class ="menu-title">
-	<a href ="login.html">LOGIN</a>
-	</div>
+    <div class ="menu-title">
+		<a href ="login.html">LOGIN</a>
+    </div>
 </div>
 <div id ="wrap">
 		<div id="slider">
 			<img src="image/image1.gif">
 		</div>
 </div>
-<div id ="content">
+<div id ="wrap">
 		<div id ="page-heading">
 			About Us<br>
 		</div>
@@ -68,7 +65,9 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel consectetur lorem. Fusce imperdiet interdum condimentum. Vivamus convallis, felis a placerat accumsan, eros nisi tempus ligula, vel iaculis lectus dolor quis lectus. Vivamus et pretium enim. Cras vel mauris et sapien dictum commodo. Nam efficitur tellus elit. Duis vel fermentum mauris. Pellentesque gravida felis vel nulla iaculis, sit amet sodales diam aliquam. Duis viverra ultrices convallis. Sed non pellentesque arcu, et efficitur nibh. 
 	</div>
 
-	
+	<div id ="cname">
+		<img src="image/line.png">
+	</div>
 	<div id= "staff-heading">
 	Our Staff
 	</div>
@@ -80,9 +79,15 @@
 			<div class ="tname">
 				<b>Luna Naind</b>
 			</div>
-			<div class ="more-description">
-				Guitar<br>
-				super.anonymous@gmail.com
+			<div class ="instrument">
+				Guitar
+			</div>
+			<div class ="teacher-description">
+				<b>Email:</b> super.anonymous@gmail.com<br>
+				<b>Work Number:</b> 12345678<br><br>
+				<b>Qualifications:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum tellus ut nulla faucibus feugiat. Etiam mollis faucibus volutpat.<br><br>
+				<b>Languages:</b> Sed sagittis rhoncus lacus, sed.<br><br>
+				<b>Hobbies:</b> Ut quis dolor tincidunt, cursus risus eu, mollis enim. Vestibulum accumsan odio vitae diam convallis elementum. Cras non euismod nulla. Nulla varius tristique ante, in dignissim libero imperdiet quis. Maecenas sit amet ex at nisl euismod aliquam. Vivamus at sem varius, pulvinar enim id, lobortis turpis.<br>
 			</div>
 		</div>
 		<div class = "teacherd">
@@ -92,9 +97,15 @@
 			<div class ="tname">
 				<b>Ahmed Saur</b>
 			</div>
-			<div class ="more-description">
-				Guitar<br>
-				super.anonymous@gmail.com
+			<div class ="instrument">
+				Guitar
+			</div>
+			<div class ="teacher-description">
+				<b>Email:</b> super.anonymous@gmail.com<br>
+				<b>Work Number:</b> 12345678<br><br>
+				<b>Qualifications:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum tellus ut nulla faucibus feugiat. Etiam mollis faucibus volutpat.<br><br>
+				<b>Languages:</b> Sed sagittis rhoncus lacus, sed.<br><br>
+				<b>Hobbies:</b> Ut quis dolor tincidunt, cursus risus eu, mollis enim. Vestibulum accumsan odio vitae diam convallis elementum. Cras non euismod nulla. Nulla varius tristique ante, in dignissim libero imperdiet quis. Maecenas sit amet ex at nisl euismod aliquam. Vivamus at sem varius, pulvinar enim id, lobortis turpis.<br>
 			</div>
 		</div>
 		<div class = "teacherd">
@@ -104,9 +115,15 @@
 			<div class ="tname">
 				<b>Ena Leynovi</b>
 			</div>
-			<div class ="more-description">
-				Guitar<br>
-				super.anonymous@gmail.com
+			<div class ="instrument">
+				Guitar
+			</div>
+			<div class ="teacher-description">
+				<b>Email:</b> super.anonymous@gmail.com<br>
+				<b>Work Number:</b> 12345678<br><br>
+				<b>Qualifications:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum tellus ut nulla faucibus feugiat. Etiam mollis faucibus volutpat.<br><br>
+				<b>Languages:</b> Sed sagittis rhoncus lacus, sed.<br><br>
+				<b>Hobbies:</b> Ut quis dolor tincidunt, cursus risus eu, mollis enim. Vestibulum accumsan odio vitae diam convallis elementum. Cras non euismod nulla. Nulla varius tristique ante, in dignissim libero imperdiet quis. Maecenas sit amet ex at nisl euismod aliquam. Vivamus at sem varius, pulvinar enim id, lobortis turpis.<br>
 			</div>
 		</div>
 		<div class = "teacherd">
@@ -116,9 +133,15 @@
 			<div class ="tname">
 				<b>Anna Larend</b>
 			</div>
-			<div class ="more-description">
-				Guitar<br>
-				super.anonymous@gmail.com
+			<div class ="instrument">
+				Guitar
+			</div>
+			<div class ="teacher-description">
+				<b>Email:</b> super.anonymous@gmail.com<br>
+				<b>Work Number:</b> 12345678<br><br>
+				<b>Qualifications:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum tellus ut nulla faucibus feugiat. Etiam mollis faucibus volutpat.<br><br>
+				<b>Languages:</b> Sed sagittis rhoncus lacus, sed.<br><br>
+				<b>Hobbies:</b> Ut quis dolor tincidunt, cursus risus eu, mollis enim. Vestibulum accumsan odio vitae diam convallis elementum. Cras non euismod nulla. Nulla varius tristique ante, in dignissim libero imperdiet quis. Maecenas sit amet ex at nisl euismod aliquam. Vivamus at sem varius, pulvinar enim id, lobortis turpis.<br>
 			</div>
 		</div>
 		<div class = "teacherd">
@@ -128,9 +151,15 @@
 			<div class ="tname">
 				<b>Kelvin Simons</b>
 			</div>
-			<div class ="more-description">
-				Guitar<br>
-				super.anonymous@gmail.com
+			<div class ="instrument">
+				Guitar
+			</div>
+			<div class ="teacher-description">
+				<b>Email:</b> super.anonymous@gmail.com<br>
+				<b>Work Number:</b> 12345678<br><br>
+				<b>Qualifications:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum tellus ut nulla faucibus feugiat. Etiam mollis faucibus volutpat.<br><br>
+				<b>Languages:</b> Sed sagittis rhoncus lacus, sed.<br><br>
+				<b>Hobbies:</b> Ut quis dolor tincidunt, cursus risus eu, mollis enim. Vestibulum accumsan odio vitae diam convallis elementum. Cras non euismod nulla. Nulla varius tristique ante, in dignissim libero imperdiet quis. Maecenas sit amet ex at nisl euismod aliquam. Vivamus at sem varius, pulvinar enim id, lobortis turpis.<br>
 			</div>
 		</div>
 	</div>
