--- a/Website/login.html
+++ b/Website/login.html
@@ -16,22 +16,19 @@
     </div>
  <div id = "menu">
     <div class ="menu-title">
-    <a href = "home.html">HOME</a>
+		<a href = "home.html">HOME</a>
     </div>
     <div class ="menu-title">
-    <a>ENROLMENT</a>
-    
+		<a>ENROLMENT</a>
     </div>
     <div class ="menu-title">
-    ABOUT US
-    <div class= "menu-content">
-        <a>Our School</a><br>
-        <a href ="About Us.html">Staff</a><br>
-        <a href ="career.html">Apply for jobs</a>
+		<a href ="About Us.html">ABOUT US</a>
     </div>
-    </div>
+	<div class ="menu-title">
+		<a href ="career.html">CAREERS</a>
+	</div>
     <div class ="menu-title">
-    <a href ="login.html">LOGIN</a>
+		<a href ="login.html">LOGIN</a>
     </div>
 </div>
 <div id = "content">
