--- a/Website/home.html
+++ b/Website/home.html
@@ -14,25 +14,22 @@
     <img src="image/logo.png">
     </a>
     </div>
-<div id = "menu">
+ <div id = "menu">
+    <div class ="menu-title">
+		<a href = "home.html">HOME</a>
+    </div>
+    <div class ="menu-title">
+		<a>ENROLMENT</a>
+    </div>
+    <div class ="menu-title">
+		<a href ="About Us.html">ABOUT US</a>
+    </div>
 	<div class ="menu-title">
-	<a href = "home.html">HOME</a>
+		<a href ="career.html">CAREERS</a>
 	</div>
-	<div class ="menu-title">
-	<a>ENROLMENT</a>
-	
-	</div>
-	<div class ="menu-title">
-    ABOUT US
-	<div class= "menu-content">
-		<a>Our School</a><br>
-		<a href ="About Us.html">Staff</a><br>
-		<a href ="career.html">Apply for jobs</a>
-	</div>
-	</div>
-	<div class ="menu-title">
-	<a href ="login.html">LOGIN</a>
-	</div>
+    <div class ="menu-title">
+		<a href ="login.html">LOGIN</a>
+    </div>
 </div>
 <div id ="wrap">
 		<div id="slider">
