Alignment alternation of the menu bar

--- a/Website/career.html
+++ b/Website/career.html
@@ -1,19 +1,19 @@
-.<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Career</title>
-    <link href="css/mycss.css" rel="stylesheet" type="text/css" >
-    <link href="css/style.css" rel="stylesheet" type="text/css" >
-  </head>
-  <body style="background:url('image/background.gif') no-repeat;
-               margin:0;
-               background-size:100% 100vh">
-   <div id ="header">
-      <a href ="home.html">
-      <img src="image/logo.png">
-      </a>
-  </div>
+<head>
+<meta charset="utf-8">
+<title>Delphic Hymnes</title>
+<link href="css/mycss.css" rel="stylesheet" type="text/css" >
+<link href="css/style.css" rel="stylesheet" type="text/css" >
+</head>
+<body style="background:url('image/background.gif') no-repeat;
+             margin:0;
+             background-size:100% 100vh">
+ <div id ="header">
+    <a href ="home.html">
+    <img src="image/logo.png">
+    </a>
+ </div>
  <div id = "menu">
     <div class ="menu-title">
 		<a href = "home.html">HOME</a>
