Fix the screen size problem

--- a/Website/About Us.html
+++ b/Website/About Us.html
@@ -6,9 +6,7 @@
 <link href="css/mycss.css" rel="stylesheet" type="text/css" >
 <link href="css/style.css" rel="stylesheet" type="text/css" >
 </head>
-<body style="background:url('image/background.gif') no-repeat;
-             margin:0;
-             background-size:100% 100vh">
+<body>
  <div id ="header">
     <a href ="home.html">
     <img src="image/logo.png">
@@ -36,12 +34,13 @@
 			<img src="image/image1.gif">
 		</div>
 </div>
-<div id ="wrap">
+<div id ="content">
 		<div id ="page-heading">
 			About Us<br>
 		</div>
 		<div id ="cname">
 			<img src="image/line.png">
+			
 		</div>
 </div>
 
