--- a/Website/career.html
+++ b/Website/career.html
@@ -6,9 +6,7 @@
 <link href="css/mycss.css" rel="stylesheet" type="text/css" >
 <link href="css/style.css" rel="stylesheet" type="text/css" >
 </head>
-<body style="background:url('image/background.gif') no-repeat;
-             margin:0;
-             background-size:100% 100vh">
+<body>
  <div id ="header">
     <a href ="home.html">
     <img src="image/logo.png">
@@ -43,6 +41,8 @@
      <div id ="cname">
  			<img src="image/line.png">
  		 </div>
+  </div>
+  <div id="wrapper">
        <div class="jobs">
          <div class = "jtitle">
            IT Services
@@ -127,7 +127,8 @@
          </div>
          <input class = "button" name="more" type="button" value="MORE">
        </div>
-   </div>
+       </div>
+   
     <div id="footer">
      			<div>
      				<div class="connect">
