--- a/Website/home.html
+++ b/Website/home.html
@@ -6,9 +6,7 @@
 <link href="css/mycss.css" rel="stylesheet" type="text/css" >
 <link href="css/style.css" rel="stylesheet" type="text/css" >
 </head>
-<body style="background:url('image/background.gif') no-repeat;
-             margin:0;
-             background-size:100% 100vh">
+<body>
  <div id ="header">
     <a href ="home.html">
     <img src="image/logo.png">
@@ -38,8 +36,8 @@
 
 </div>
 	<div id ="content">
-		<div id ="cname">
-			<img src="image/coresevices.png">
+		<div id ="page-heading">
+			Our Courses<br>
 		</div>
 		<div class = "coursetype">
 			<div class= "coursename">
