--- a/Website/login.html
+++ b/Website/login.html
@@ -6,9 +6,7 @@
     <link href="css/mycss.css" rel="stylesheet" type="text/css" >
     <link href="css/style.css" rel="stylesheet" type="text/css" >
   </head>
-  <body style="background:url('image/back.gif') no-repeat;
-             margin:0;
-             background-size:100% 100vh">
+  <body>
     <div id ="header">
     <a href ="home.html">
     <img src="image/logo.png">
@@ -31,7 +29,7 @@
 		<a href ="login.html">LOGIN</a>
     </div>
 </div>
-<div id = "content">
+<div id = "logcontent">
     <div id = "login">
       <div class="titlebar">
         Log In
