update meanu with a search bar

--- a/Website/career.html
+++ b/Website/career.html
@@ -28,6 +28,10 @@
     <div class ="menu-title">
 		<a href ="login.html">LOGIN</a>
     </div>
+    <form id ="search">
+   <input id = "stext" name="searcht" type="text" placeholder="Search...">  
+   <input id = "sbutton" name="searchb" type="submit" value ="">
+   </form>
 </div>
   <div id ="wrap">
   		<div id="slider">
