--- a/Website/portal/profile.html
+++ b/Website/portal/profile.html
@@ -298,7 +298,7 @@
 
   <footer class="main-footer">
     
-    <strong>Copyright &copy; 2016 KeyboarSmashers.</strong> All rights
+    <strong>Copyright &copy; 2016 KeyboardSmashers.</strong> All rights
     reserved.
   </footer>
 
