--- a/Website/portal/index.html
+++ b/Website/portal/index.html
@@ -347,7 +347,7 @@
 
   <footer class="main-footer">
     
-    <strong>Copyright &copy; 2016 KeyboarSmashers.</strong> All rights
+    <strong>Copyright &copy; 2016 KeyboardSmashers.</strong> All rights
     reserved.
   </footer>
 
