--- a/Website/portal/timetable.html
+++ b/Website/portal/timetable.html
@@ -230,7 +230,7 @@
 
   <footer class="main-footer">
     
-    <strong>Copyright &copy; 2016 KeyboarSmashers.</strong> All rights
+    <strong>Copyright &copy; 2016 KeyboardSmashers.</strong> All rights
     reserved.
   </footer>
 
