--- a/Website/portal/index.html
+++ b/Website/portal/index.html
@@ -207,9 +207,10 @@
     <section class="content">
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-7">
           <div class="box box-solid">
             <div class="box-header with-border">
+			  <i class="fa fa-info-circle"></i>
               <h3 class="box-title">My Announments</h3>
             </div>
             <!-- /.box-header -->
@@ -285,13 +286,51 @@
               </div>
             </div>
             <!-- /.box-body -->
+			
           </div>
           <!-- /.box -->
+		  <div class="box box-default">
+            <div class="box-header with-border">
+              <i class="fa fa-bullhorn"></i>
+
+              <h3 class="box-title">Callouts</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <div class="callout callout-danger">
+                <h4>System maintenance</h4>
+
+                <p>There is a problem that we need to fix......</p>
+              </div>
+              <!-- <div class="callout callout-info">
+                <h4>I am an info callout!</h4>
+
+                <p>Follow the steps to continue to payment.</p>
+              </div> -->
+              <!-- <div class="callout callout-warning">
+                <h4>I am a warning callout!</h4>
+
+                <p>This is a yellow callout.</p>
+              </div> -->
+              <div class="callout callout-success">
+                <h4>Free Food Friday</h4>
+
+                <p>Twinkle, twinkle, little star, How I wonder what you are! 
+				Up above the world so high, Like a diamond in the sky. </p>
+              </div>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+		  
         </div>
         <!-- /.col -->
-        <div class="col-md-6">
+		
+		
+        <div class="col-md-5">
           <div class="box box-solid">
             <div class="box-header with-border">
+			  <i class="fa fa-camera-retro"></i>
               <h3 class="box-title">School Activities</h3>
             </div>
             <!-- /.box-header -->
