Added new pages

--- a/Website/portal/index.html
+++ b/Website/portal/index.html
@@ -375,6 +375,23 @@
             <!-- /.box-body -->
           </div>
           <!-- /.box -->
+		  <div class="info-box bg-yellow">
+            <span class="info-box-icon"><i class="fa fa-music"></i></span>
+
+            <div class="info-box-content">
+			    <span class="info-box-text"><b>In the Moment of Inspiration</b> - pinkzebra</span>
+			    <div style="margin-top:5px">
+                    <audio controls>
+                       <source src="songs/In-the-Moment-of-Inspiration.MP3" type="audio/mp3">
+                       Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </div>
+            <!-- /.info-box-content -->
+          </div>
+          <!-- /.info-box -->
+		  
+		  
         </div>
         <!-- /.col -->
       </div>
