--- a/Website/portal/tools.html
+++ b/Website/portal/tools.html
@@ -284,6 +284,27 @@
                 <!-- /.box -->
 			
 			</div>
+			<div class="col-md-6">
+			    <div class="box box-success">
+            <div class="box-header with-border">
+              <h3 class="box-title">Online Tutorials</h3>
+
+              <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+              </div>
+            </div>
+            <div class="box-body">
+                <iframe width="560" height="315" 
+				src="https://www.youtube.com/embed/QHs_2-pB_6c?list=PLUyDmNalB0rjP2anw_332rs8-oJMapOMU" 
+				frameborder="0" allowfullscreen></iframe>
+				
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+			</div>
         
         </div>
 
