--- a/Website/portal/materials.html
+++ b/Website/portal/materials.html
@@ -218,27 +218,27 @@
             </ul>
             <div class="tab-content">
               <div class="tab-pane" id="tab_1-1">
-                <b>How to use:</b>
+                Twinkle, twinkle, little star,
+                      How I wonder what you are!
+                      Up above the world so high,
+                      Like a diamond in the sky.
 
-                <p>Exactly like the original bootstrap tabs except you should use
-                  the custom wrapper <code>.nav-tabs-custom</code> to achieve this style.</p>
-                A wonderful serenity has taken possession of my entire soul,
-                like these sweet mornings of spring which I enjoy with my whole heart.
-                I am alone, and feel the charm of existence in this spot,
-                which was created for the bliss of souls like mine. I am so happy,
-                my dear friend, so absorbed in the exquisite sense of mere tranquil existence,
-                that I neglect my talents. I should be incapable of drawing a single stroke
-                at the present moment; and yet I feel that I never was a greater artist than now.
+                      When the blazing sun is gone,
+                      When he nothing shines upon,
+                      Then you show your little light,
+                      Twinkle, twinkle, all the night.
               </div>
               <!-- /.tab-pane -->
               <div class="tab-pane" id="tab_2-2">
-                The European languages are members of the same family. Their separate existence is a myth.
-                For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ
-                in their grammar, their pronunciation and their most common words. Everyone realizes why a
-                new common language would be desirable: one could refuse to pay expensive translators. To
-                achieve this, it would be necessary to have uniform grammar, pronunciation and more common
-                words. If several languages coalesce, the grammar of the resulting language is more simple
-                and regular than that of the individual languages.
+                Twinkle, twinkle, little star,
+                      How I wonder what you are!
+                      Up above the world so high,
+                      Like a diamond in the sky.
+
+                      When the blazing sun is gone,
+                      When he nothing shines upon,
+                      Then you show your little light,
+                      Twinkle, twinkle, all the night.
               </div>
               <!-- /.tab-pane -->
               <div class="tab-pane active" id="tab_3-2">
