--- a/Website/login.html
+++ b/Website/login.html
@@ -17,7 +17,7 @@
 		<a href = "home.html">HOME</a>
     </div>
     <div class ="menu-title">
-		<a>ENROLMENT</a>
+		<a href ="Enrolments.html">ENROLMENT</a>
     </div>
     <div class ="menu-title">
 		<a href ="About Us.html">ABOUT US</a>
