Basic draft for enrolments page

--- a/Website/Enrolments.html
+++ b/Website/Enrolments.html
@@ -44,10 +44,72 @@
 		</div>
 		<div id ="cname">
 			<img src="image/line.png">
-			
 		</div>
 </div>
 
-<div id ="wrapper" >
-blah
+<div class ="form-wrapper">
+	<form action="" method="post">
+	<fieldset>
+	<legend>All Students</legend>
+		First name: *<br>
+		<input type="text" name="firstname">
+		<br><br>
+		Last name: *<br>
+		<input type="text" name="lastname">
+		<br><br>
+		DOB: *<br>
+		<input type="date" name="dob">
+		<br><br>
+		Address: *<br>
+		<input type="text" name="address">
+		<br><br>
+		Gender: *<br>
+		<div class ="options">
+		<input type="radio" name="gender" value="male">Male<br>
+		<input type="radio" name="gender" value="female">Female<br>
+		<input type="radio" name="gender" value="other">Other<br>
+		</div>
+		<br><br>
+		Preferred Phone Number:<br>
+		<input type="text" name="phonenumber">
+		<br><br>
+		Email Address: *<br>
+		<input type="text" name="email">
+		<br><br>
+		Facebook:<br>
+		<input type="text" name="firstname">
+		<br><br>
+		<input type="submit" value="Submit">
+		<br><br>
+	</fieldset>
+	<br>
+	<fieldset>
+	<legend>Children</legend>
+		Parent/Guardian Name:<br>
+		<input type="text" name="guardianname">
+		<br><br>
+		Parent/Guardian Preferred Phone Number:<br>
+		<input type="text" name="phonenumber">
+		<br><br>
+		Parent/Guardian Email Address:<br>
+		<input type="text" name="email">
+		<br><br>
+	</fieldset>
+	</form>
+	
+	<p>Any fields without an asterix * are optional</p>
 </div>
+
+<div id="footer">
+ 			<div>
+ 				<div class="connect">
+ 					<a href="https://twitter.com/" class="twitter">twitter</a>
+ 					<a href="https://www.facebook.com/" class="facebook">facebook</a>
+ 					<a href="https://plus.google.com/" class="googleplus">googleplus</a>
+ 					<a href="https://www.pinterest.com/" class="pinterest">pinterest</a>
+ 				</div>
+ 				<p>&copy; 2023 by KeyboardSmashers. All rights reserved.</p>
+ 			</div>
+  </div>
+</body>
+</html>
