--- a/Website/Enrolments.html
+++ b/Website/Enrolments.html
@@ -61,7 +61,7 @@
 		<input type="date" name="dob">
 		<br><br>
 		Address: *<br>
-		<input type="text" name="address">
+		<input class = "Address" type="text" name="address">
 		<br><br>
 		Gender: *<br>
 		<div class ="options">
