--- a/Website/portal/index.html
+++ b/Website/portal/index.html
@@ -103,10 +103,10 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="profile.html" class="btn btn-default btn-flat">Profile</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="../login.html" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
