--- a/Website/portal/materials.html
+++ b/Website/portal/materials.html
@@ -269,7 +269,61 @@
           </div>
           <!-- nav-tabs-custom -->
 			
-			</div>
+		</div>
+		
+		<div class="col-md-12">
+		    <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">Music Instruments</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body no-padding">
+              <table class="table">
+                <tr>
+                  <th style="width:150px">Instrument</th>
+                  <th>Description</th>
+                  <th>Hire Cost (per month)</th>
+                  <th style="width: 200px">Hire</th>
+                </tr>
+                <tr>
+                  <td><img src="dist/img/violin.png" alt="" style="width:100px;height:100px"></td>
+                  <td>In good condition</td>
+                  <td>
+                    <span class="badge bg-yellow">$50</span>
+                  </td>
+                  <td><a style="width:100px"class="btn btn-danger btn-xs">Return</a></td>
+                </tr>
+                <tr>
+                  <td><img src="dist/img/saxophone.png" alt="" style="width:100px;height:100px"></td>
+                  <td>New</td>
+                  <td>
+                    <span class="badge bg-yellow">$100</span>
+                  </td>
+                  <td><a style="width:100px"class="btn btn-success btn-xs">Hire</a></td>
+                </tr>
+                <tr>
+                  <td><img src="dist/img/guitar.png" alt="" style="width:100px;height:100px"></td>
+                  <td>Excellent condition</td>
+                  <td>
+                    <span class="badge bg-yellow">$100</span>
+                  </td>
+                  <td><a style="width:100px"class="btn btn-success btn-xs">Hire</a></td>
+                </tr>
+                <tr>
+                  <td><img src="dist/img/violin.png" alt="" style="width:100px;height:100px"></td>
+                  <td>Repair</td>
+                  <td>
+                    <span class="badge bg-yellow">$50</span>
+                  </td>
+                  <td><a style="width:100px"class="btn btn-warning btn-xs">Not Available</a></td>
+                </tr>
+              </table>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+		</div>
+		
       </div>
 
       
