--- a/Website/login.html
+++ b/Website/login.html
@@ -5,6 +5,14 @@
     <title>Login</title>
     <link href="css/mycss.css" rel="stylesheet" type="text/css" >
     <link href="css/style.css" rel="stylesheet" type="text/css" >
+	<link rel="stylesheet" href="portal/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="portal/dist/css/AdminLTE.min.css">
+  <!-- iCheck -->
+  <link rel="stylesheet" href="portal/plugins/iCheck/square/blue.css">
   </head>
   <body>
     <div id ="header">
@@ -34,16 +42,39 @@
    </form>
 </div>
 <div id = "logcontent">
-    <div id = "login">
-      <div class="titlebar">
-        Log In
+    <div class="login-box">
+  
+  <div class="login-box-body">
+    <p class="login-box-msg">Sign in to start your session</p>
+
+    <form action="portal/index.html" method="post">
+      <div class="form-group has-feedback">
+        <input type="email" class="form-control" placeholder="User Account">
+        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
-      <form class ="loginform">
-        <input class = "textfield" name="username" type="text" placeholder="UserName">
-        <input class = "textfield" name="password" type="password" placeholder="Password">
-        <a href ="portal/index.html"><input class = "button" name="login" type="button" value="LogIn"></a>
-      </form>
-    </div>
+      <div class="form-group has-feedback">
+        <input type="password" class="form-control" placeholder="Password">
+        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+      </div>
+      <div class="row">
+        <div class="col-xs-8">
+          <div class="checkbox icheck">
+            <label>
+              <input type="checkbox"> Remember Me
+            </label>
+          </div>
+        </div>
+        <!-- /.col -->
+        <div class="col-xs-4">
+          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+        </div>
+        <!-- /.col -->
+      </div>
+    </form>
+    <a href="#">I forgot my password</a><br>
+  </div>
+  <!-- /.login-box-body -->
+</div>
 </div>
 <div id="footer">
 			<div>
@@ -56,5 +87,20 @@
 				<p>&copy; 2023 by KeyboardSmashers. All rights reserved.</p>
 			</div>
 </div>
-  </body>
+
+<script src="portal/plugins/jQuery/jquery-2.2.3.min.js"></script>
+<!-- Bootstrap 3.3.6 -->
+<script src="portal/bootstrap/js/bootstrap.min.js"></script>
+<!-- iCheck -->
+<script src="portal/plugins/iCheck/icheck.min.js"></script>
+<script>
+  $(function () {
+    $('input').iCheck({
+      checkboxClass: 'icheckbox_square-blue',
+      radioClass: 'iradio_square-blue',
+      increaseArea: '20%' // optional
+    });
+  });
+</script>
+</body>
 </html>
