--- a/Website/login.html
+++ b/Website/login.html
@@ -49,7 +49,7 @@
 
     <form action="portal/index.html" method="post">
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="User Account">
+        <input type="email" class="form-control" placeholder="Username">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
