--- a/Website/portal/teachercontact.html
+++ b/Website/portal/teachercontact.html
@@ -190,8 +190,8 @@
 			<div style="padding:20px;border-bottom:1px solid #ddd;"class="row">
                 <div class="col-md-9">
 				    
-				    <h4><b>Mr James Bond</b></h4>
-					<p><b>Email:</b> james@gmail.com
+				    <h4><b>Mrs Claire Harding</b></h4>
+					<p><b>Email:</b> charding@gmail.com
 					<br><b>Office Location:</b> Room 101
 					<br><b>Office Hours:</b> 9 AM - 4 PM
 					<br><b>Notes:</b> Hello!
@@ -205,8 +205,8 @@
 			<div style="padding:20px;border-bottom:1px solid #ddd;"class="row">
                 <div class="col-md-9">
 				    
-				    <h4><b>Mr James Bond</b></h4>
-					<p><b>Email:</b> james@gmail.com
+				    <h4><b>Mr Humphrey Mitchum</b></h4>
+					<p><b>Email:</b> hmitchum@gmail.com
 					<br><b>Office Location:</b> Room 101
 					<br><b>Office Hours:</b> 9 AM - 4 PM
 					<br><b>Notes:</b> Hello!
