--- a/Website/portal/materials.html
+++ b/Website/portal/materials.html
@@ -299,7 +299,7 @@
                   <td>
                     <span class="badge bg-yellow">$100</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-success btn-xs">Request</a></td>
+                  <td><a style="width:100px"class="btn btn-success btn-xs">Availabilityt</a></td>
                 </tr>
                 <tr>
                   <td><img src="dist/img/guitar.png" alt="" style="width:100px;height:100px"></td>
