--- a/Website/portal/materials.html
+++ b/Website/portal/materials.html
@@ -283,7 +283,7 @@
                   <th style="width:150px">Instrument</th>
                   <th>Description</th>
                   <th>Rental Cost (per month)</th>
-                  <th style="width: 200px">Request</th>
+                  <th style="width: 200px">Available</th>
                 </tr>
                 <tr>
                   <td><img src="dist/img/violin.png" alt="" style="width:100px;height:100px"></td>
@@ -307,7 +307,7 @@
                   <td>
                     <span class="badge bg-yellow">$100</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-success btn-xs">Request</a></td>
+                  <td><a style="width:100px"class="btn btn-success btn-xs">Unavailable</a></td>
                 </tr>
                 <tr>
                   <td><img src="dist/img/violin.png" alt="" style="width:100px;height:100px"></td>
