--- a/Website/portal/materials.html
+++ b/Website/portal/materials.html
@@ -283,7 +283,7 @@
                   <th style="width:150px">Instrument</th>
                   <th>Description</th>
                   <th>Rental Cost (per month)</th>
-                  <th style="width: 200px">Available</th>
+                  <th style="width: 200px">Availablility</th>
                 </tr>
                 <tr>
                   <td><img src="dist/img/violin.png" alt="" style="width:100px;height:100px"></td>
@@ -291,7 +291,7 @@
                   <td>
                     <span class="badge bg-yellow">$50</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-danger btn-xs">Return</a></td>
+                  <td><a style="width:100px"class="btn btn-danger btn-xs">Unavailable</a></td>
                 </tr>
                 <tr>
                   <td><img src="dist/img/saxophone.png" alt="" style="width:100px;height:100px"></td>
@@ -299,7 +299,7 @@
                   <td>
                     <span class="badge bg-yellow">$100</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-success btn-xs">Availabilityt</a></td>
+                  <td><a style="width:100px"class="btn btn-success btn-xs">Available</a></td>
                 </tr>
                 <tr>
                   <td><img src="dist/img/guitar.png" alt="" style="width:100px;height:100px"></td>
@@ -315,7 +315,7 @@
                   <td>
                     <span class="badge bg-yellow">$50</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-warning btn-xs">Not Available</a></td>
+                  <td><a style="width:100px"class="btn btn-warning btn-xs">Unavailable</a></td>
                 </tr>
               </table>
             </div>
