--- a/Website/home.html
+++ b/Website/home.html
@@ -27,7 +27,12 @@
 	</div>
     <div class ="menu-title">
 		<a href ="login.html">LOGIN</a>
-    
+    </div>
+    <form id ="search">
+	 <input id = "stext" name="searcht" type="text" placeholder="Search...">	
+	 <input id = "sbutton" name="searchb" type="submit" value ="">
+	 </form>
+</div>
 <div id ="wrap">
 		<div id="slider">
 			<img src="image/image1.gif">
