--- a/Website/Enrolments.html
+++ b/Website/Enrolments.html
@@ -84,7 +84,7 @@
 	</fieldset>
 	<br>
 	<fieldset>
-	<legend>Children</legend>
+	<legend>Under 18</legend>
 		Parent/Guardian Name:<br>
 		<input type="text" name="guardianname">
 		<br><br>
